--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Nano Banana — Image-to-Image</title>
   <style>
-    body { background:#0b0b0f; color:#eaeaf0; font-family:system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
+    body { background:#0b0b0f; color:#eaeaf0; font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif; }
     .wrap { max-width:880px; margin:40px auto; padding:24px; background:#14141b; border-radius:16px; box-shadow:0 8px 28px rgba(0,0,0,.45); }
     h1 { font-weight:700; font-size:24px; margin:0 0 12px; }
     .row{display:flex; gap:16px; align-items:flex-start; flex-wrap:wrap}
@@ -27,15 +27,16 @@
   <div class="wrap">
     <h1>Nano Banana — Image-to-Image</h1>
 
-    <form id="jobForm">
+    <!-- Prevent default submit to avoid page reload -->
+    <form id="jobForm" onsubmit="return false;">
       <div class="row">
         <div class="col">
           <label for="files">Select 1–4 images (jpeg/png/webp, ≤10MB each)</label>
           <input id="files" type="file" accept="image/*" multiple />
           <div id="thumbs" class="grid"></div>
           <div class="note">
-            This page converts your files to Base64 and sends <b>JSON</b> to a Netlify Function
-            (<code>kie-create</code>). The function uploads to KIE’s file uploader and then calls
+            This page converts files to <b>Base64</b> and sends <b>JSON</b> to the Netlify Function
+            <code>/.netlify/functions/kie-create</code>. The function uploads to KIE’s uploader and then calls
             <code>POST https://api.kie.ai/api/v1/jobs/createTask</code>.
           </div>
         </div>
@@ -50,7 +51,8 @@
             <option value="jpeg">JPEG</option>
           </select>
           <div style="height:14px"></div>
-          <button id="runBtn" type="submit">Run</button>
+          <!-- IMPORTANT: button type is 'button' so the form doesn't submit/reload -->
+          <button id="runBtn" type="button">Run</button>
         </div>
       </div>
     </form>
@@ -65,19 +67,18 @@
     </details>
   </div>
 
-<!-- ====== THE SCRIPT LIVES RIGHT HERE ====== -->
+<!-- =================== SCRIPT =================== -->
 <script>
 const filesEl   = document.getElementById('files');
 const thumbsEl  = document.getElementById('thumbs');
 const promptEl  = document.getElementById('prompt');
 const formatEl  = document.getElementById('format');
 const runBtn    = document.getElementById('runBtn');
-const formEl    = document.getElementById('jobForm');
 const dbg       = document.getElementById('debug');
-const gallery   = document.getElementById('gallery');
 const outBox    = document.getElementById('out');
+const gallery   = document.getElementById('gallery');
 
-function log(...a){ dbg.textContent += '\\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); }
+function log(...a){ dbg.textContent += '\n' + a.map(x=>typeof x==='string'?x:JSON.stringify(x,null,2)).join(' '); }
 
 filesEl.addEventListener('change', () => {
   thumbsEl.innerHTML = '';
@@ -89,6 +90,7 @@ filesEl.addEventListener('change', () => {
   });
 });
 
+// Convert a File to base64 (safe for ~10MB)
 async function fileToBase64(file){
   const ab = await file.arrayBuffer();
   let bin=''; const bytes=new Uint8Array(ab), step=0x8000;
@@ -98,16 +100,16 @@ async function fileToBase64(file){
   return btoa(bin);
 }
 
-formEl.addEventListener('submit', async (e) => {
-  e.preventDefault();
+// CLICK handler (no form submit!)
+runBtn.addEventListener('click', async () => {
   dbg.textContent = 'Submitting…';
   gallery.innerHTML = '';
   outBox.style.display = 'none';
 
   const files = [...filesEl.files];
-  if (!files.length) return alert('Choose at least one image.');
-  if (files.length > 4) return alert('Max 4 images.');
-  for (const f of files){ if (f.size > 10*1024*1024) return alert(\`"\${f.name}" exceeds 10MB.\`); }
+  if (!files.length) { alert('Choose at least one image.'); return; }
+  if (files.length > 4) { alert('Max 4 images.'); return; }
+  for (const f of files){ if (f.size > 10*1024*1024){ alert(`"${f.name}" exceeds 10MB.`); return; } }
 
   runBtn.disabled = true;
   try {
@@ -121,7 +123,6 @@ formEl.addEventListener('submit', async (e) => {
       })))
     };
 
-    // IMPORTANT: this calls the Netlify Function that does upload -> createTask
     const res = await fetch('/.netlify/functions/kie-create', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
@@ -130,7 +131,7 @@ formEl.addEventListener('submit', async (e) => {
 
     const ct  = res.headers.get('content-type') || '';
     const txt = await res.text();
-    log(\`Response status: \${res.status} content-type: \${ct}\`);
+    log(`Response status: ${res.status} content-type: ${ct}`);
     try { log('JSON:', JSON.parse(txt)); } catch { log('TEXT:', txt); }
     outBox.style.display = 'block';
   } catch (err) {
